# Reddit-Sharding-Celebrity-Problem

./: .env  Cargo.toml  README.md  schema.sql  schema_shard.sql
k6/: celebrity_spike.js
src/: api_docs.rs  main.rs  sharding.rs
src/config/: database.rs
src/handlers/: comment_handler.rs  dashboard_handler.rs  debug_handler.rs  entry_handler.rs  hello_handler.rs  mod.rs  post_handler.rs  stats_handler.rs  user_handler.rs  vote_handler.rs
src/models/requests/: comment_requests.rs  hello_request.rs  mod.rs  post_requests.rs  user_requests.rs  vote_requests.rs
src/models/responses/: comment_response.rs  entry_response.rs  hello_response.rs  mod.rs  post_response.rs  post_stats_response.rs  shard_stats_response.rs  user_response.rs  vote_response.rs
src/repositories/: comment_repository.rs  entry_repository.rs  mod.rs  post_repository.rs  user_repository.rs  vote_repository.rs
src/routes/: comment_routes.rs  dashboard_routes.rs  debug_routes.rs  entry_routes.rs  hello_routes.rs  mod.rs  post_routes.rs  stats_routes.rs  user_routes.rs  vote_routes.rs
src/services/: comment_service.rs  entry_service.rs  mod.rs  post_service.rs  stats_service.rs  user_service.rs  vote_service.rs
static/: dashboard.html
